updated locale usage